--- a/style.css
+++ b/style.css
@@ -3,7 +3,15 @@ html, body {
   margin: 0;
 }
 
+.toggle {
+  border: 2px  solid black;
+  width: 65px;
+  height: 65px;
+  border-radius:  32px;
+  box-sizing: border-box;
 
-h1 {
-  color: red;
+}
+
+.toggle.active {
+  background-color: yellow;
 }
